-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
6.5.3, 6.6
-
None
-
-
756632890 (dev), 88002e2a1 (6.6), e2d25d334 (tqtc/lts-6.5)
-
2023wk46FOQtforAndroid
Attached is the modified declarative-camera.zipapplication:
- Camera is opened in a popup
- Video player is opened in a popup
- Uses native backend for multimedia
The issue is that when a video is first recorded with the camera and then played on the popup, the video is not displayed correctly, but it is somehow playing corrupted content (textures?).
See the Screen_Recording_20231102_092205.mp4
Steps to reproduce:
- Open camera
- Switch to video
- Record a video
- Close popup
- Open player
- Observe corrupted video
It should be noted that the video preview works correctly in camera.
- is cloned by
-
QTBUG-124780 Camera preview not working in a Popup with Android native backend
-
- Closed
-
- relates to
-
QTBUG-114126 Video not rendered for .mov files in QML MediaPlayer
-
- Closed
-
- mentioned in
-
Page Loading...
For Gerrit Dashboard: QTBUG-118699 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
520200,4 | Android-backend: Set new display on MediaPlayer when Rhi updated | dev | qt/qtmultimedia | Status: MERGED | +2 | 0 |
520614,2 | Android-backend: Set new display on MediaPlayer when Rhi updated | 6.6 | qt/qtmultimedia | Status: MERGED | +2 | 0 |
520628,2 | Android-backend: Set new display on MediaPlayer when Rhi updated | tqtc/lts-6.5 | qt/tqtc-qtmultimedia | Status: MERGED | +2 | 0 |